welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:23: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
		if (getX==0) {ligneD();ecritMessage();setPos(getX(),getY()+1)} 
                                       ^ZigZag:24: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
			else {ligneG();ecritMessage();setPos(getX(),getY()+1)}
                                       ^